--- a/style.css
+++ b/style.css
@@ -1,14 +1,18 @@
+* {
+  font-family: Segoe UI,SegoeUI,Segoe WP,Helvetica Neue,Helvetica,Tahoma,Arial,sans-serif;
+}
+
 body {
     /*background-color: green;*/
     width: 60%;
     padding: auto;
     margin: auto;
-    font-family: Segoe UI, serif;
 }
 
 section {
     /*background-color: tomato;*/
     padding: auto;
+    padding-bottom: 1.5em;
     /*border: solid aliceblue 1px ;*/
 }
 
@@ -37,4 +41,11 @@ a {
     font-size: 0.9rem;
     margin-top: 0px;
     color: hsl(0, 0%, 20%);
+/*    border:1px solid hsla(262,46%,90%,.999); */
+    margin-left: 5%;
+}
+
+img {
+    width: 25%;
+    float: right;
 }
